.provarCaches/00D5f000005vwGkEAI/objects/rstk__iclocitemscrap__c.object
<CustomObject>
    <description>iclocitemscrap__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_defaultproject__c</fullName>
        <formula>rstk__iclocitemscrap_div__r.rstk__sydiv_dflthomeproj__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Home Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>NULL</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__iclocitemscrap_item__r.rstk__icitem_item__r.rstk__peitem_item__c</formula>
        <inlineHelpText>Internal formula for constructing the associated name field.</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Division associated with the scrapped Item</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Item Scrap by Stock Loc</relationshipLabel>
        <relationshipName>diviclocitemscraps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the scrapped Item Number</inlineHelpText>
        <label>Item Number</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Item Scrap by Stock Loc</relationshipLabel>
        <relationshipName>iclocitemscraps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_locid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the general warehouse area in which the quantity is located. (DD)</description>
        <inlineHelpText>This is the Location Id associated with the scrapped Item</inlineHelpText>
        <label>Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Item Scrap by Stock Loc</relationshipLabel>
        <relationshipName>Item_Scrap_by_Stock_Loc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_locnum__c</fullName>
        <description>Typically this is the ‘row, aisle, bin’ number. (DD)</description>
        <inlineHelpText>This is the Location Number associated with this Item&apos;s Scrap record</inlineHelpText>
        <label>Location No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_locqty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the quantity of the item in this scrap location. 

This is incremented on an inventory scrap transaction 

This is decremented on an inventory scrap reversal transaction 

Note: 

On a scrap reversal in a weighted average cost system, the cost that is used is derived from the cost elements on this ICLOCITEMSCRAP record. (DD)</description>
        <inlineHelpText>This is the Quantity of the Item in this Scrap Location</inlineHelpText>
        <label>Location Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_locsec__c</fullName>
        <description>If this is a ‘LOT CONTROLLED’ item, then the Item’s Lot Number is in this field.  

If this is a ‘SERIAL CONTROLLED’ item, then the Item’s Serial Number is in this field.  

If this is not a lot or serial controlled item, then this field is set to null. (DD)</description>
        <inlineHelpText>This is the Location Section associated with this Item&apos;s Scrap record</inlineHelpText>
        <label>Tracking Ind</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_lstindate__c</fullName>
        <description>When the ICLOCITEMSCRAP record is added , this date is set to the current date. It is not modified by any additional transactions.  

This date is helpful in a weighted average cost environment in determining how long a period the scrap’s cost is being averaged. (DD)</description>
        <inlineHelpText>This is the Date that this Scrap Location record was first created</inlineHelpText>
        <label>Last Scrap Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_proj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>If Project Control is active within the division, this is the project number for this on-hand inventory. 

If Project Control is not active within the division, this field is null. (DD)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Item Scrap by Stock Loc</relationshipLabel>
        <relationshipName>Item_Scrap_by_Stock_Loc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Item Scrap by Stock Loc</relationshipLabel>
        <relationshipName>Item_Scrap_by_Stock_Loc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_ucstfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Freight Cost of the Item</inlineHelpText>
        <label>Unit Cost, Freight</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_ucstlab__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In a standard cost system, this value is zero.  

In a weighted average cost system, the unit cost computed, on a scrap transaction, is computed using the normal weighted cost methods considering: 

The current scrap inventory quantity 

The current scrap inventory average unit cost 

The quantity that is being scrapped  

The unit cost of the scrap transaction 

In a weighted average cost system, the unit cost is unchanged, on a scrap reversal transaction. (DD)</description>
        <inlineHelpText>This is the Standard Unit Labor Cost of the Item</inlineHelpText>
        <label>Unit Cost, Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_ucstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In a standard cost system, this value is zero.  

In a weighted average cost system, the unit cost computed, on a scrap transaction, is computed using the normal weighted cost methods considering: 

The current scrap inventory quantity 

The current scrap inventory average unit cost 

The quantity that is being scrapped  

The unit cost of the scrap transaction 

In a weighted average cost system, the unit cost is unchanged, on a scrap reversal transaction. (DD)</description>
        <inlineHelpText>This is the Standard Unit Material Cost of the Item</inlineHelpText>
        <label>Unit Cost, Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_ucstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In a standard cost system, this value is zero.  

In a weighted average cost system, the unit cost computed, on a scrap transaction, is computed using the normal weighted cost methods considering: 

The current scrap inventory quantity 

The current scrap inventory average unit cost 

The quantity that is being scrapped  

The unit cost of the scrap transaction 

In a weighted average cost system, the unit cost is unchanged, on a scrap reversal transaction. (DD)</description>
        <inlineHelpText>This is the Standard Overhead Fringe Cost of the Item</inlineHelpText>
        <label>Unit Cost, Fringe Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_ucstohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In a standard cost system, this value is zero.  

In a weighted average cost system, the unit cost computed, on a scrap transaction, is computed using the normal weighted cost methods considering: 

The current scrap inventory quantity 

The current scrap inventory average unit cost 

The quantity that is being scrapped  

The unit cost of the scrap transaction 

In a weighted average cost system, the unit cost is unchanged, on a scrap reversal transaction. (DD)</description>
        <inlineHelpText>This is the Standard Unit Overhead Labor Cost of the Item</inlineHelpText>
        <label>Unit Cost, Labor Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_ucstohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In a standard cost system, this value is zero.  

In a weighted average cost system, the unit cost computed, on a scrap transaction, is computed using the normal weighted cost methods considering: 

The current scrap inventory quantity 

The current scrap inventory average unit cost 

The quantity that is being scrapped  

The unit cost of the scrap transaction 

In a weighted average cost system, the unit cost is unchanged, on a scrap reversal transaction. (DD)</description>
        <inlineHelpText>This is the Standard Overhead Machine Cost of the Item</inlineHelpText>
        <label>Unit Cost, Machine Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_ucstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In a standard cost system, this value is zero.  

In a weighted average cost system, the unit cost computed, on a scrap transaction, is computed using the normal weighted cost methods considering: 

The current scrap inventory quantity 

The current scrap inventory average unit cost 

The quantity that is being scrapped  

The unit cost of the scrap transaction 

In a weighted average cost system, the unit cost is unchanged, on a scrap reversal transaction. (DD)</description>
        <inlineHelpText>This is the Standard Unit Overhead Material Cost of the Item</inlineHelpText>
        <label>Unit Cost, Material Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_ucstothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Other Indirect Cost of the Item</inlineHelpText>
        <label>Unit Cost, Oth Landed</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_ucstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In a standard cost system, this value is zero.  

In a weighted average cost system, the unit cost computed, on a scrap transaction, is computed using the normal weighted cost methods considering: 

The current scrap inventory quantity 

The current scrap inventory average unit cost 

The quantity that is being scrapped  

The unit cost of the scrap transaction 

In a weighted average cost system, the unit cost is unchanged, on a scrap reversal transaction. (DD)</description>
        <inlineHelpText>This is the Standard Unit Subcontract Labor Cost of the Item</inlineHelpText>
        <label>Unit Cost, Subcontract Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_ucstsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In a standard cost system, this value is zero.  

In a weighted average cost system, the unit cost computed, on a scrap transaction, is computed using the normal weighted cost methods considering: 

The current scrap inventory quantity 

The current scrap inventory average unit cost 

The quantity that is being scrapped  

The unit cost of the scrap transaction 

In a weighted average cost system, the unit cost is unchanged, on a scrap reversal transaction. (DD)</description>
        <inlineHelpText>This is the Standard Unit Subcontract Material Cost of the Item</inlineHelpText>
        <label>Unit Cost, Subcontract Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemscrap_wbs__c</fullName>
        <inlineHelpText>This is the WBS associated with this Item&apos;s Scrap record</inlineHelpText>
        <label>WBS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Item Scrap by Stock Loc</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstk__iclocitemscrap_div__c</columns>
        <columns>rstk__iclocitemscrap_item__c</columns>
        <columns>rstk__iclocitemscrap_site__c</columns>
        <columns>rstk__iclocitemscrap_proj__c</columns>
        <columns>rstk__iclocitemscrap_locid__c</columns>
        <columns>rstk__iclocitemscrap_locnum__c</columns>
        <columns>rstk__iclocitemscrap_locqty__c</columns>
        <columns>rstk__iclocitemscrap_lstindate__c</columns>
        <columns>rstk__iclocitemscrap_locsec__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstk__formula_extid__c</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__iclocitemscrap_div__c</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>rstk__iclocitemscrap_item__c</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>rstk__iclocitemscrap_item__c</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>rstk__iclocitemscrap_item__c</field>
            <operation>contains</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ICLOCITEMSCRAP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items Scrap by Stock Loc</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>